--- a/incident-report.html
+++ b/incident-report.html
@@ -766,6 +766,9 @@ document.getElementById('uploadImages').addEventListener('change', function () {
   }
 });
 
+// ✅ Add this to open the modal when button is clicked
+reportBtn.addEventListener("click", openModal);
+
 
 
 
@@ -774,5 +777,6 @@ document.getElementById('uploadImages').addEventListener('change', function () {
 </body>
 
 </html>
+
 
 
