--- a/incident-report.html
+++ b/incident-report.html
@@ -37,8 +37,7 @@ main {
 
 /* ===== Typography ===== */
 header h1 {
-  font-size: 2.2rem;
-  font-weight: 700;
+  font-weight: 600;
   color: #2a4d3a;
   text-align: center;
   margin-bottom: 0.5rem;
@@ -51,7 +50,7 @@ section {
 }
 
 header h1 {
-  font-size: 2.4rem;
+  font-size: 2.0rem;
   margin-bottom: 0.75rem;
 }
 
@@ -63,12 +62,11 @@ section h2 {
 /* ===== Buttons ===== */
 button,
 input[type="submit"],
-#reportBtn,
-.logout-btn,
-#captureBtn,
-#retakeBtn {
+#retakeBtn,
+#logoutBtn,
+#captureBtn {
   border: none;
-  border-radius: 30px;
+  border-radius: 5px;
   font-weight: 600;
   font-size: 1rem;
   cursor: pointer;
@@ -338,10 +336,146 @@ img {
   transform: translateY(-2px);
 }
 
-#preview-container img {
-  max-width: 120px;
-  height: auto;
+
+
+
+/* Modal container smaller & compact */
+/* Smaller overall font */
+#incidentModal form {
+  font-size: 0.85rem; /* ~13.6px instead of default 16px */
+  line-height: 1.3;
 }
+
+/* Reduce spacing between inputs and labels */
+#incidentModal form > div,
+#incidentModal form fieldset {
+  margin-bottom: 0.75rem; /* Less vertical space */
+}
+
+/* Labels */
+#incidentModal label {
+  margin-bottom: 0.25rem;
+  font-weight: 600;
+  color: #374151; /* gray-700 */
+}
+
+/* Inputs and textarea */
+#incidentModal input[type="text"],
+#incidentModal textarea {
+  padding: 6px 8px;
+  font-size: 0.85rem;
+  border-radius: 4px;
+  border: 1px solid #d1d5db; /* gray-300 */
+  width: 100%;
+  box-sizing: border-box;
+}
+
+/* Reduce textarea rows a bit */
+#description {
+  min-height: 60px; /* about 3 rows */
+}
+
+/* Fieldset legend */
+#incidentModal fieldset legend {
+  font-weight: 600;
+  color: #4b5563; /* gray-600 */
+  margin-bottom: 0.5rem;
+  font-size: 0.9rem;
+}
+
+/* Category radios: two columns, less gap */
+#categoryFieldset > div {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem 1rem;
+}
+
+#categoryFieldset label {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  font-size: 0.85rem;
+}
+
+/* Buttons smaller and tighter */
+#incidentModal button,
+#incidentModal input[type="submit"] {
+  font-size: 0.85rem;
+  padding: 0.4rem 0.75rem;
+  border-radius: 5px;
+}
+
+/* Modal padding and max-width */
+#incidentModal .modal {
+  padding: 1rem 1.25rem;
+  max-width: 520px;
+}
+
+/* Adjust spacing inside upload/capture section */
+#incidentModal fieldset.border {
+  padding: 0.75rem 1rem;
+}
+
+#incidentModal #preview-container {
+  gap: 0.4rem;
+  margin-bottom: 0.5rem;
+}
+
+#incidentModal #preview-container img {
+  width: 90px;
+  height: auto;
+  border-radius: 4px;
+}
+
+/* Reduce space around camera and buttons */
+#incidentModal video#camera {
+  margin-bottom: 0.5rem;
+  border-radius: 4px;
+}
+
+
+
+  /* Category fieldset legend */
+  #categoryFieldset legend {
+    font-weight: 600;
+    margin-bottom: 0.4rem;
+  }
+  /* Category options grid */
+  #categoryFieldset > div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.4rem 1.2rem;
+  }
+  /* Align label text nicely */
+  #categoryFieldset label {
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    cursor: pointer;
+  }
+  #categoryFieldset input[type="radio"] {
+    flex-shrink: 0;
+    width: 16px;
+    height: 16px;
+  }
+  /* Buttons smaller */
+  #incidentForm button,
+  #incidentForm input[type="submit"] {
+    font-size: 0.85rem;
+    padding: 0.4rem 0.8rem;
+  }
+  /* Upload buttons side by side */
+  fieldset.border > div.flex {
+    gap: 0.5rem;
+  }
+  /* Video & preview smaller */
+  #camera {
+    height: 150px;
+  }
+  #preview-container img {
+    max-height: 80px;
+    border-radius: 4px;
+  }
 
   </style>
 </head>
@@ -350,150 +484,108 @@ img {
 <button id="logoutBtn" class="logout-btn-top-right">Logout</button>
 
 <main class="max-w-3xl mx-auto px-4 py-6">
-  <header class="text-center mb-6">
-    <h1 class="text-2xl font-semibold">Report An Incident</h1>
-  </header>
+  <header class="text-center mb-5">
+  <h1 class="text-lg font-semibold">Report An Incident</h1>
+</header>
 
-  <section class="text-left space-y-3 text-sm text-gray-800">
-    <h2 class="text-base font-semibold">What Can Be Reported</h2>
-    <p>This section is intended for reporting any incidents that directly impact or hinder sales activities. These may include, but are not limited to:</p>
 
-    <ul class="list-disc list-inside space-y-1">
-      <li><strong>Network or service outages</strong> affecting customer experience or new activations</li>
-      <li><strong>System or portal issues</strong> (e.g. CRM errors, login problems)</li>
-      <li><strong>SIM/MBB Device stock shortages</strong> or delays in inventory replenishment</li>
-      <li><strong>Customer complaints</strong> that are recurring or unresolved and affecting sales</li>
-      <li><strong>Weather Impact</strong> or similar issues directly effecting sales</li>
-    </ul>
+  <section style="font-size: 15px; color: #2e3e2f; line-height: 1.5;" class="text-left space-y-3">
+  <h2 style="font-size: 18px; font-weight: 600; margin-bottom: 0.5rem;">What Can Be Reported</h2>
+  <p>This form is for reporting incidents that directly affect or disrupt sales activities. Examples include, but are not limited to:</p>
 
-    <p>Please provide as much detail as possible when submitting an incident to ensure timely resolution.</p>
-  </section>
+  <ul style="margin-left: 1.25rem; list-style-type: disc; margin-bottom: 1rem;">
+    <li><strong>Network or service outages</strong> impacting customer experience or new activations</li>
+    <li><strong>BVS device malfunctions</strong> causing disruption in transactions</li>
+    <li><strong>System or portal issues</strong>, such as CRM errors or login problems</li>
+    <li><strong>Power outages</strong> resulting in downtime or service interruptions</li>
+    <li><strong>Law and order situations or strikes</strong> affecting safety or operations</li>
+    <li><strong>Weather-related disruptions</strong> like rain, floods, or storms that impact sales activities</li>
+  </ul>
+
+  <p>Please provide detailed information when submitting an incident to help ensure a swift and effective resolution.</p>
+</section>
+
+
+
 
  <div class="button-column">
   <button 
     id="reportBtn"
     class="px-5 py-3 bg-green-700 text-white text-sm font-semibold rounded-full shadow-md hover:bg-green-800 transition"
   >
-    Report an Incident
+    Report
   </button>
   
 </div>
 
 
-  <!-- Modal Section -->
-  <div class="modal-overlay" id="incidentModal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" tabindex="-1">
-    <div class="modal bg-white p-6 rounded-md shadow-md w-full max-w-lg mx-auto mt-8 space-y-4">
-      <button class="close-modal-btn text-xl float-right" aria-label="Close incident report form" type="button">&times;</button>
+<div class="modal-overlay" id="incidentModal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" tabindex="-1">
+  <div class="modal bg-white rounded-md shadow-lg mx-auto mt-10">
+    <button class="close-modal-btn text-lg float-right text-gray-500 hover:text-red-500" aria-label="Close incident report form" type="button">&times;</button>
+    <h2 id="modalTitle" class="text-lg font-semibold text-gray-800 mb-2">Incident Details</h2>
+    <form id="incidentForm" action="https://docs.google.com/forms/d/e/1FAIpQLSdrmFNeQAUEjYGOYgHWOZCmEgtGknaXroWTD0keUro6DHocMg/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;" novalidate>
+      
+      <!-- Username -->
+      <div>
+        <label for="username" class="block font-medium text-gray-700 mb-1">Username</label>
+        <input type="text" id="username" name="entry.2120015252" readonly class="w-full border rounded bg-gray-100 text-gray-700 cursor-not-allowed" />
+      </div>
 
-      <h2 id="modalTitle" class="text-lg font-semibold mb-4">Incident Reporting</h2>
+      <!-- Area -->
+      <div>
+        <label for="area" class="block font-medium text-gray-700 mb-1">Franchise ID / Area</label>
+        <input type="text" id="area" name="entry.1059382315" placeholder="Enter area" required aria-required="true" class="w-full border rounded focus:ring-2 focus:ring-indigo-500" />
+      </div>
 
-     <form
-  id="incidentForm"
-  action="https://docs.google.com/forms/d/e/1FAIpQLSdrmFNeQAUEjYGOYgHWOZCmEgtGknaXroWTD0keUro6DHocMg/formResponse"
-  method="POST"
-  target="hidden_iframe"
-  onsubmit="submitted=true;"
-  novalidate
-  class="space-y-4 text-sm"
->
-  <!-- Username (Read-only) -->
-  <div>
-    <label for="username" class="block mb-1 font-medium text-gray-700">Username</label>
-    <input
-      type="text"
-      id="username"
-      name="entry.2120015252"
-      readonly
-      class="w-full border rounded px-3 py-2 bg-gray-100 text-gray-700 cursor-not-allowed"
-    />
+      <!-- Categories -->
+      <fieldset id="categoryFieldset" required>
+        <legend>Category (select one):</legend>
+        <div>
+          <label><input type="radio" name="entry.1991846988" value="BVS"> BVS</label>
+          <label><input type="radio" name="entry.1991846988" value="Network"> Network / Service</label>
+          <label><input type="radio" name="entry.1991846988" value="Portal"> System / Portal</label>
+          <label><input type="radio" name="entry.1991846988" value="Weather"> Weather / Rain / Flood</label>
+          <label><input type="radio" name="entry.1991846988" value="PowerOutage"> Power Outage</label>
+          <label><input type="radio" name="entry.1991846988" value="LawandOrder"> Law & Order / Strikes</label>
+          <label><input type="radio" name="entry.1991846988" value="Other"> Other</label>
+        </div>
+      </fieldset>
+
+      <!-- Description -->
+      <div>
+        <label for="description" class="block font-medium text-gray-700 mb-1">Description</label>
+        <textarea id="description" name="entry.1887453304" rows="3" placeholder="Describe the incident in detail" required class="w-full border rounded focus:ring-2 focus:ring-indigo-500"></textarea>
+      </div>
+
+      <!-- Upload/Capture Section -->
+      <fieldset class="border p-3 rounded">
+        <legend class="font-medium text-gray-700 mb-1">Upload or Capture Image(s)</legend>
+        <div class="flex flex-wrap gap-2 mb-2">
+          <button type="button" id="uploadImageBtn" class="bg-indigo-600 text-white rounded hover:bg-indigo-700 transition">Upload Image</button>
+          <button type="button" id="openCameraBtn" class="bg-green-600 text-white rounded hover:bg-green-700 transition">Take Photo</button>
+        </div>
+        <input type="file" id="uploadImages" name="uploadImages" accept="image/*" multiple style="display:none;">
+        <video id="camera" autoplay playsinline class="w-full rounded border mb-2"></video>
+        <canvas id="snapshot" style="display:none;"></canvas>
+        <div id="preview-container" class="grid grid-cols-2 gap-2 mb-2">
+          <img id="preview" src="" alt="Image preview" style="display:none;" class="rounded border" />
+        </div>
+        <div class="flex gap-2">
+          <button type="button" id="captureBtn" class="bg-gray-700 text-white rounded hover:bg-gray-800 transition">Capture Photo</button>
+          <button type="button" id="retakeBtn" style="display:none;" class="bg-gray-400 text-white rounded hover:bg-gray-500 transition">Retake</button>
+        </div>
+      </fieldset>
+
+      <!-- Hidden image input -->
+      <input type="hidden" id="imgUrlInput" name="entry.1179564217" value="">
+
+      <!-- Submit -->
+      <button type="submit" class="w-full bg-indigo-600 text-white rounded py-2 hover:bg-indigo-700 transition">Submit Incident</button>
+    </form>
   </div>
-
-  <!-- Area Input -->
-  <div>
-    <label for="area" class="block mb-1 font-medium text-gray-700">Area</label>
-    <input
-      type="text"
-      id="area"
-      name="entry.1059382315"
-      placeholder="Enter area"
-      required
-      aria-required="true"
-      class="w-full border rounded px-3 py-2 focus:ring-2 focus:ring-indigo-500"
-    />
-  </div>
-
-  <!-- Description -->
-  <div>
-    <label for="description" class="block mb-1 font-medium text-gray-700">Description</label>
-    <textarea
-      id="description"
-      name="entry.1887453304"
-      rows="4"
-      placeholder="Describe the incident"
-      required
-      aria-required="true"
-      class="w-full border rounded px-3 py-2 focus:ring-2 focus:ring-indigo-500"
-    ></textarea>
-  </div>
-
-<!-- Capture / Upload Image Section -->
-<fieldset class="border p-3 rounded">
-  <legend class="font-medium text-gray-700 mb-2">Upload or Capture Image(s)</legend>
-
-  <!-- Upload Input -->
-  <div class="mb-3">
-    <!-- Choose Upload or Capture -->
-<div class="flex gap-4 mb-4">
-  <button type="button" id="uploadImageBtn" class="bg-indigo-600 text-white px-4 py-2 rounded text-sm hover:bg-indigo-700 transition">
-    Upload Image
-  </button>
-  <button type="button" id="openCameraBtn" class="bg-green-600 text-white px-4 py-2 rounded text-sm hover:bg-green-700 transition">
-    Take Photo
-  </button>
 </div>
 
-<input
-  type="file"
-  id="uploadImages"
-  name="uploadImages"
-  accept="image/*"
-  multiple
-  class="block w-full text-sm text-gray-600"
-  style="display: none;"
-/>
 
-  </div>
-  
- <!-- Camera -->
-  <video id="camera" autoplay playsinline class="w-full rounded border mb-2"></video>
-  <canvas id="snapshot" style="display: none;"></canvas>
-
-  <!-- Preview Area -->
-  <div id="preview-container" class="mt-2 grid grid-cols-2 gap-2">
-    <img id="preview" src="" alt="Image preview" style="display: none;" class="rounded border" />
-  </div>
-
-  <div class="flex gap-3 mt-3">
-    <button type="button" id="captureBtn" class="bg-gray-700 text-white px-3 py-2 rounded text-sm hover:bg-gray-800 transition">
-      Capture Photo
-    </button>
-    <button type="button" id="retakeBtn" style="display: none;" class="bg-gray-400 text-white px-3 py-2 rounded text-sm hover:bg-gray-500 transition">
-      Retake
-    </button>
-  </div>
-</fieldset>
-
-  <!-- Hidden image filename input -->
-  <input type="hidden" id="imgUrlInput" name="entry.1179564217" value="">
-
-  <!-- Submit button -->
-  <button
-    type="submit"
-    class="mt-4 bg-indigo-600 text-white px-4 py-2 rounded text-sm hover:bg-indigo-700 transition"
-  >
-    Submit Incident
-  </button>
-</form>
 
       <iframe name="hidden_iframe" style="display:none;"></iframe>
     </div>
@@ -717,6 +809,13 @@ const usernameInput = document.getElementById("username");
       }
     }
 
+    const categoryCheckboxes = document.querySelectorAll('input[name="entry.1991846988"]:checked');
+if (categoryCheckboxes.length === 0) {
+  alert("Please select at least one category.");
+  return;  // prevent submission
+}
+
+
     // Set all URLs into hidden input
     imgUrlInput.value = uploadedUrls.join('\n');
 
@@ -732,6 +831,8 @@ const usernameInput = document.getElementById("username");
     closeModal();
   });
 
+
+  
 
  function resizeImage(file, maxWidth = 800, maxHeight = 800) {
     return new Promise((resolve, reject) => {
@@ -796,18 +897,44 @@ const usernameInput = document.getElementById("username");
     img.style.height = 'auto';
 
     // Delete button
-    const deleteBtn = document.createElement('button');
-    deleteBtn.textContent = '×';
-    deleteBtn.style.position = 'absolute';
-    deleteBtn.style.top = '2px';
-    deleteBtn.style.right = '2px';
-    deleteBtn.style.background = 'red';
-    deleteBtn.style.color = 'white';
-    deleteBtn.style.border = 'none';
-    deleteBtn.style.borderRadius = '50%';
-    deleteBtn.style.width = '20px';
-    deleteBtn.style.height = '20px';
-    deleteBtn.style.cursor = 'pointer';
+    // Delete button
+const deleteBtn = document.createElement('button');
+deleteBtn.textContent = '×';
+
+// Styling with better visual design
+Object.assign(deleteBtn.style, {
+  position: 'absolute',
+  top: '6px',
+  right: '6px',
+  background: 'rgba(0, 0, 0, 0.6)', // semi-transparent black
+  color: 'white',
+  border: 'none',
+  borderRadius: '50%',
+  width: '24px',
+  height: '24px',
+  cursor: 'pointer',
+  display: 'flex',
+  alignItems: 'center',
+  justifyContent: 'center',
+  fontSize: '18px',
+  fontWeight: 'bold',
+  lineHeight: '1',
+  boxShadow: '0 0 4px rgba(0,0,0,0.3)',
+  transition: 'background-color 0.3s ease, transform 0.2s ease',
+  userSelect: 'none',
+  padding: '0',
+});
+
+// Hover effect (using JS because inline styles)
+deleteBtn.addEventListener('mouseenter', () => {
+  deleteBtn.style.background = 'rgba(0, 0, 0, 0.85)';
+  deleteBtn.style.transform = 'scale(1.1)';
+});
+
+deleteBtn.addEventListener('mouseleave', () => {
+  deleteBtn.style.background = 'rgba(0, 0, 0, 0.6)';
+  deleteBtn.style.transform = 'scale(1)';
+});
 
     deleteBtn.onclick = () => {
       // Remove from preview
@@ -963,6 +1090,3 @@ reportBtn.addEventListener("click", openModal);
 </body>
 
 </html>
-
-
-
